--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <input type="password" id="firecrawlApiKey" placeholder="Enter your Firecrawl API key (optional)" />
                 <small style="color: #666;">Get your free API key at <a href="https://firecrawl.dev" target="_blank">firecrawl.dev</a></small>
             </div>
+            <div class="form-group">
+                <label for="supadataApiKey">Supadata API Key (for YouTube transcripts):</label>
+                <input type="password" id="supadataApiKey" placeholder="Enter your Supadata API key (optional)" />
+                <small style="color: #666;">Get 100 free requests/month at <a href="https://supadata.ai" target="_blank">supadata.ai</a> - More reliable than Tor proxy</small>
+            </div>
             <button class="btn btn-primary" onclick="saveConfig()">Save Configuration</button>
         </div>
 
